--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "angular-oauth2",
   "version": "1.0.0",
   "description": "Angular OAuth2",
-  "main": "index.js",
+  "main": "./src/angular-oauth2.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp test",
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "repository": {
     "type": "git",
@@ -12,12 +13,30 @@
   },
   "keywords": [
     "AngularJS",
+    "Authentication",
     "OAuth2"
   ],
-  "author": "Rui Silva <rui.penso@gmail.com>",
+  "author": {
+    "name": "Seegno",
+    "email": "projects@seegno.com"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/seegno/angular-oauth2/issues"
   },
-  "homepage": "https://github.com/seegno/angular-oauth2"
+  "homepage": "https://github.com/seegno/angular-oauth2",
+  "devDependencies": {
+    "bower": "^1.3.12",
+    "gulp": "^3.8.10"
+  },
+  "browser": {
+    "angular": "./bower_components/angular/angular.js",
+    "angular-cookie": "./bower_components/angular-cookie/angular-cookie.js",
+    "query-string": "./bower_components/query-string/query-string.js"
+  },
+  "browserify-shim": {
+    "angular": {
+      "exports": "angular"
+    }
+  }
 }
