--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-oauth2",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "AngularJS OAuth2",
   "main": "./dist/angular-oauth2.js",
   "authors": [
@@ -23,8 +23,8 @@
     "test"
   ],
   "dependencies": {
-    "angular": "1.3.9",
-    "angular-cookie": "4.0.6",
-    "query-string": "1.0.0"
+    "angular": "^1.3.9",
+    "angular-cookie": "^4.0.6",
+    "query-string": "^1.0.0"
   }
 }
