--- a/bower.json
+++ b/bower.json
@@ -23,8 +23,8 @@
     "test"
   ],
   "dependencies": {
-    "angular": "^1.3.9",
-    "angular-cookie": "^4.0.6",
+    "angular": "^1.4.0",
+    "angular-cookies": "^1.4.0",
     "query-string": "^1.0.0"
   }
 }
