--- a/package.json
+++ b/package.json
@@ -42,17 +42,22 @@
     "karma": "^0.12.31",
     "karma-browserify": "^2.0.0",
     "karma-chrome-launcher": "^0.1.7",
+    "karma-firefox-launcher": "^0.1.4",
     "karma-mocha": "^0.1.10",
     "karma-mocha-reporter": "^0.3.1",
     "karma-should": "0.0.1",
     "karma-sinon": "^1.0.4",
     "lodash": "^2.4.1",
-    "should": "^4.6.0"
+    "should": "^4.6.0",
+    "yargs": "^3.6.0"
   },
   "browser": {
     "angular": "./bower_components/angular/angular.js",
     "angular-cookies": "./bower_components/angular-cookies/angular-cookies.js",
     "query-string": "./bower_components/query-string/query-string.js"
+  },
+  "scripts": {
+    "test": "./node_modules/.bin/gulp test --browsers Firefox"
   },
   "browserify-shim": {
     "angular": {
