--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "2.1.1",
   "description": "Angular OAuth2",
   "main": "./dist/angular-oauth2.js",
+  "scripts": {
+    "changelog": "./node_modules/.bin/github-changes -o seegno -r angular-oauth2 -a --only-pulls --use-commit-body --title 'Changelog' --date-format '/ YYYY-MM-DD'"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/seegno/angular-oauth2.git"
@@ -25,6 +28,7 @@
     "6to5ify": "^3.1.2",
     "angular-mocks": "^1.3.9",
     "bower": "^1.3.12",
+    "github-changes": "^1.0.0",
     "gulp": "^3.8.10",
     "gulp-6to5": "^2.0.2",
     "gulp-concat": "^2.4.3",
