--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "url": "https://github.com/seegno/angular-oauth2/issues"
   },
   "homepage": "https://github.com/seegno/angular-oauth2",
+  "dependencies": {
+    "angular": "^1.4.0",
+    "angular-cookies": "^1.4.0",
+    "query-string": "^1.0.0"
+  },
   "devDependencies": {
     "6to5ify": "^3.1.2",
     "angular-mocks": "^1.3.9",
