--- a/package.json
+++ b/package.json
@@ -27,12 +27,11 @@
     "query-string": "^1.0.0"
   },
   "devDependencies": {
-    "6to5ify": "^3.1.2",
     "angular-mocks": "^1.3.9",
     "bower": "^1.3.12",
     "github-changes": "^1.0.0",
     "gulp": "^3.8.10",
-    "gulp-6to5": "^2.0.2",
+    "gulp-babel": "^5.3.0",
     "gulp-concat": "^2.4.3",
     "gulp-header": "^1.2.2",
     "gulp-jshint": "^1.9.0",
