--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,7 @@
   ],
   "dependencies": {
     "angular": "^1.4.0",
-    "angular-cookies": "^1.4.0",
-    "query-string": "^1.0.0"
+    "query-string": "^1.0.0",
+    "angular-localforage": "^1.3.1"
   }
 }
