--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
   "dependencies": {
     "angular": "^1.4.0",
     "angular-cookies": "^1.4.0",
+    "angular-localforage": "1.3.1",
     "query-string": "^1.0.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.9",
     "github-changes": "^1.0.0",
-    "gulp": "^3.8.10",
+    "gulp": "3.9.1",
     "gulp-babel": "^5.3.0",
     "gulp-concat": "^2.4.3",
     "gulp-header": "^1.2.2",
@@ -54,6 +55,6 @@
   },
   "scripts": {
     "changelog": "./node_modules/.bin/github-changes -o seegno -r angular-oauth2 -a --only-pulls --use-commit-body --title 'Changelog' --date-format '/ YYYY-MM-DD'",
-    "test": "./node_modules/.bin/gulp test --browsers Firefox"
+    "test": "./node_modules/.bin/gulp test --browsers Chrome"
   }
 }
