--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "angular-oauth2",
-  "version": "4.0.0",
-  "description": "Angular OAuth2",
-  "main": "./dist/angular-oauth2.js",
+  "name": "ng-oauth-localforage",
+  "version": "0.1.0",
+  "description": "Angular OAuth using LocalForage",
+  "main": "dist/angular-oauth2.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/seegno/angular-oauth2.git"
+    "url": "https://github.com/DotHide/angular-oauth2.git"
   },
   "keywords": [
     "AngularJS",
@@ -13,14 +13,14 @@
     "OAuth2"
   ],
   "author": {
-    "name": "Seegno",
-    "email": "projects@seegno.com"
+    "name": ["Seegno", "Martin"],
+    "email": "dothide@gmail.com"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/seegno/angular-oauth2/issues"
+    "url": "https://github.com/DotHide/angular-oauth2/issues"
   },
-  "homepage": "https://github.com/seegno/angular-oauth2",
+  "homepage": "https://github.com/DotHide/angular-oauth2",
   "dependencies": {
     "angular": "^1.4.0",
     "angular-localforage": "1.3.1",
