--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,19 @@
 {
   "name": "angular-oauth2",
-  "version": "4.0.0",
-  "description": "AngularJS OAuth2",
+  "version": "0.1.0",
+  "description": "Angular OAuth using LocalForage",
   "main": "dist/angular-oauth2.js",
   "authors": [
-    "Seegno <projects@seegno.com>"
+    "Martin <dothide@gmail.com>"
   ],
   "keywords": [
     "AngularJS",
     "Authentication",
-    "OAuth2"
+    "OAuth2",
+    "LocalForage"
   ],
   "license": "MIT",
-  "homepage": "https://github.com/seegno/angular-oauth2",
+  "homepage": "https://github.com/DotHide/angular-oauth2",
   "ignore": [
     "**/.*",
     "bower_components",
