--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-oauth2",
-  "version": "4.0.0",
+  "version": "4.1.1",
   "description": "AngularJS OAuth2",
   "main": "./dist/angular-oauth2.js",
   "authors": [
@@ -9,7 +9,8 @@
   "keywords": [
     "AngularJS",
     "Authentication",
-    "OAuth2"
+    "OAuth2",
+    "localstorage"
   ],
   "license": "MIT",
   "homepage": "https://github.com/seegno/angular-oauth2",
@@ -25,6 +26,7 @@
   "dependencies": {
     "angular": "^1.4.0",
     "angular-cookies": "^1.4.0",
-    "query-string": "^1.0.0"
+    "query-string": "^1.0.0",
+    "ngstorage": "^0.3.11"
   }
 }
